--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>MaCP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -12,16 +12,26 @@
 <body>
     <style>
         .map {
-            width: 40%;
+            width: 60%;
+
+        }
+
+        .data_view {
             display: flex;
-            position: absolute;
-            right: 0px;
-            top: 60px;
+            flex-direction: row;
+        }
+
+        .table tr:nth-child(odd) {
+            background-color: #f2f2f2;
+        }
+
+        .table tr:nth-child(even) {
+            background-color: #d9d9d9;
         }
     </style>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="/">MaCP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -60,10 +70,19 @@
             </div>
         </div>
     </nav>
-    
-    <div class="map">
-        {{ map_html | safe }}
+    <div class="data_view">
+        <div class="table p-3">
+            {{dataFrame | safe}}
+        </div>
+        <div class="map p-3">
+            {{ map_html | safe }}
+        </div>
     </div>
+
+
+
+
+    <!-- JS SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
