--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,15 +10,6 @@
 </head>
 
 <body>
-    <style>
-        .map {
-            width: 40%;
-            display: flex;
-            position: absolute;
-            right: 0px;
-            top: 60px;
-        }
-    </style>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -60,10 +51,20 @@
             </div>
         </div>
     </nav>
-    
+
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-12">
+                <!-- Button here -->
+                <button class="btn btn-primary">Button above map</button>
+            </div>
+        </div>
+    </div>
+
     <div class="map">
         {{ map_html | safe }}
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
