--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,46 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MaCP</title>
+    <link rel="shortcut icon" href={% static "favicon.ico" %} type="image/x-icon">
+    <link rel="stylesheet" href={% static "dashboard.css" %}>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <title>Your Dashboard</title>
+    <title>Dashboard</title>
+    
 </head>
 
 <body>
-    <style>
-        .map {
-            width: 60%;
-
-        }
-
-        .data_view {
-            display: flex;
-            flex-direction: row;
-            height: 90vh;
-        }
-        .table tr:nth-child(odd) {
-            background-color: #f2f2f2;
-        }
-
-        .table tr:nth-child(even) {
-            background-color: #d9d9d9;
-        }
-        .table{
-            display:flex;
-            flex-direction:column;
-        }
-        table{
-            height:500px;
-        }
-    </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">MaCP</a>
+            <a class="navbar-brand" href="/">Grabber</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -56,16 +35,20 @@
                     </li>
                     
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" role="search" method="GET" action="{% url 'map_view' %}">
+                    <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
         </div>
     </nav>
+    <div class="title mx-3">
+        <h1>Data Table Pincode-wise data</h1>
+        <hr>
+    </div>
     <div class="data_view">
-        <div class="table p-3">
-            <table>
+        <div class="table px-3 table-wrapper">
+            <table class="fl-table">
                 <thead>
                     <tr>
                         <th>Crop Type</th>
@@ -92,40 +75,36 @@
             <div class="pagination justify-content-center my-2">
 
                 {% if page_obj.has_previous %}
-                <a class="btn btn-outline-primary item-number text-dark" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                <a class="btn btn-outline-primary item-number" href="?page={{ page_obj.previous_page_number }}">Previous</a>
                 {% endif %}
 
                 {% for i in page_obj.paginator.page_range %}
                     {% if page_obj.number == i %}
-                        <span class="item-number current-page-real mx-3 my-1 text-dark">{{ i }}</span>
+                        <span class="item-number current-page-real mx-3 my-1 ">{{ i }}</span>
                     {% else %}
-                        {% if i == 1 or i == totalpages or i in page_obj.paginator.page_range|slice:":7" or i in page_obj.paginator.page_range|slice:"-7:" %}
+                        {% if i == 1 or i == totalpages or i in page_obj.paginator.page_range|slice:":3" or i in page_obj.paginator.page_range|slice:"-3:" %}
                             <a class="item-number current-page mx-3 my-1" href="?page={{ i }}">{{ i }}</a>
                         {% endif %}
                     {% endif %}
                 {% endfor %}
 
                 {% if page_obj.has_next %}
-                <a class="btn btn-outline-primary item-number text-dark" href="?page={{ page_obj.next_page_number }}">Next</a>
+                <a class="btn btn-outline-primary item-number" href="?page={{ page_obj.next_page_number }}">Next</a>
                 {% endif %}
             </div>
 
             {% endif %}
         </div>
         <div class="map">
-            {{ map_html | safe }}
+            <div class="Fullmap">
+                {{ map_html | safe }}
+            </div>
+            <div class="mapDetails" style="width: 400px;margin-left: 0px;">
+                Map Info
+            </div>
         </div>
 
     </div>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -144,11 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function() {
-            $(".resizable").resizable();
-        });
-    </script>
+
 </body>
 
 </html>
