--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,52 +1,14 @@
+{% extends "base.html" %}
+{% block title %}Dashboard{% endblock title %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href={% static "favicon.ico" %} type="image/x-icon">
-    <link rel="stylesheet" href={% static "dashboard.css" %}>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Dashboard</title>
-    
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Grabber</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Dashboard</a>
-                    </li>
-                    
-                </ul>
-                <form class="d-flex" role="search" method="GET" action="{% url 'map_view' %}">
-                    <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
     <div class="title mx-3">
-        <h1>Data Table Pincode-wise data</h1>
+        <h1>Pincode-wise data</h1>
         <hr>
     </div>
-    <div class="data_view">
+    <div class="data_view animate-on-load">
         <div class="table px-3 table-wrapper">
             <table class="fl-table">
                 <thead>
@@ -95,6 +57,7 @@
 
             {% endif %}
         </div>
+        <hr>
         <div class="map">
             <div class="Fullmap">
                 {{ map_html | safe }}
@@ -105,7 +68,7 @@
         </div>
 
     </div>
-
+{% endblock content %}
 
 
 
