--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Grabber</a>
+            <a class="navbar-brand" href="/">GeoPointer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -37,7 +37,8 @@
                     </li>
                     
                 </ul>
-                <form class="d-flex" role="search" method="GET" action="{% url 'map_view' %}">
+                <form class="d-flex" role="search" method="POST" action="{% url 'map_view' %}">
+                    {% csrf_token %}
                     <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
