Removing lodu from ekansh

--- a/templates/cropinsight.html
+++ b/templates/cropinsight.html
@@ -3,7 +3,7 @@
 {% block title %}Crop Insights{% endblock title %}
 {% block content %}
     <div class="title mx-3">
-        <h1>BC-wise data</h1>
+        <h1>{{SearchTitle}}</h1>
         <hr>
     </div>
     <div class="data_view">
@@ -98,7 +98,7 @@
                     {{ map_html | safe }}
                 </div>
             </div>
-            <div class="mapDetails" style="width: 400px;margin-left: 0px;height: 137px;overflow:scroll;scrollbar-width: none;-ms-overflow-style: none;">
+            <div class="mapDetails" style="width: 400px;margin-left: 0px;height: 137px;overflow:scroll;scrollbar-width: none;-ms-overflow-style: none;background:#0a2bdb4a;">
                 
             </div>
         </div>
