--- a/templates/cropinsight.html
+++ b/templates/cropinsight.html
@@ -7,65 +7,69 @@
         <hr>
     </div>
     <div class="data_view">
-        <div class="table px-3 table-wrapper" style="overflow:auto;scrollbar-width: none;-ms-overflow-style: none;">
-            <table class="fl-table" >
-                <thead>
-                    <tr>
-                        <th>Name of BC</th>
-                        <th>Contact Number</th>
-                        <th>Gender</th>
-                        <th>Bank Name</th>
-                        <th>State</th>
-                        <th>District</th>
-                        <th>Office Name</th>
-                        <th>Pincode</th>
-                        <th>Corporate BC name</th>
-                        <th>ODOP product</th>
-                        <th>CODE WORD OF PRODUCT LIST</th>
-                        <th>CROP1 NAME</th>
-                        <th>CROP1 SEASON</th>
-                        <th>CROP1 AREA</th>
-                        <th>CROP1 PRODUCTION</th>
-                        <th>CROP1 Pincode</th>
-                        <th>CROP NAME</th>
-                        <th>SEASON</th>
-                        <th>CROP AREA</th>
-                        <th>CROP PRODUCTION</th>
-                        <th>CROP NAME.1</th>
-                        <th>SEASON.1</th>
-                        <th>CROP AREA.1</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for data in items %}
-                    <tr>
-                        <td>{{ data.name_of_bc|default_if_none:"N/A" }}</td>
-                        <td>{{ data.contact_number|default_if_none:"N/A" }}</td>
-                        <td>{{ data.gender|default_if_none:"N/A" }}</td>
-                        <td>{{ data.bank_name|default_if_none:"N/A" }}</td>
-                        <td>{{ data.state|default_if_none:"N/A" }}</td>
-                        <td>{{ data.district|default_if_none:"N/A" }}</td>
-                        <td>{{ data.office_name|default_if_none:"N/A" }}</td>
-                        <td>{{ data.pincode|default_if_none:"N/A" }}</td>
-                        <td>{{ data.corporate_bc_name|default_if_none:"N/A" }}</td>
-                        <td>{{ data.odop_product|default_if_none:"N/A" }}</td>
-                        <td>{{ data.code_word_of_product_list|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop1_name|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop1_season|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop1_area|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop1_production|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop1_pincode|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop_name|default_if_none:"N/A" }}</td>
-                        <td>{{ data.season|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop_area|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop_production|default_if_none:"N/A" }}</td>
-                        <td>{{ data.crop_name_1|default_if_none:"N/A" }}</td>
-                        <td>N/A</td>
-                        <td>{{ data.crop_area_1|default_if_none:"N/A" }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+        <div class="tableandPagination">
+
+            <div class="table px-3 table-wrapper" style="width:580px">
+                <table class="fl-table" >
+                    <thead>
+                        <tr>
+                            <th>Name of BC</th>
+                            <th>Contact Number</th>
+                            <th>Gender</th>
+                            <th>Bank Name</th>
+                            <th>State</th>
+                            <th>District</th>
+                            <th>Office Name</th>
+                            <th>Pincode</th>
+                            <th>Corporate BC name</th>
+                            <th>ODOP product</th>
+                            <th>CODE WORD OF PRODUCT LIST</th>
+                            <th>CROP1 NAME</th>
+                            <th>CROP1 SEASON</th>
+                            <th>CROP1 AREA</th>
+                            <th>CROP1 PRODUCTION</th>
+                            <th>CROP1 Pincode</th>
+                            <th>CROP NAME</th>
+                            <th>SEASON</th>
+                            <th>CROP AREA</th>
+                            <th>CROP PRODUCTION</th>
+                            <th>CROP NAME.1</th>
+                            <th>SEASON.1</th>
+                            <th>CROP AREA.1</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for data in items %}
+                        <tr>
+                            <td>{{ data.name_of_bc|default_if_none:"N/A" }}</td>
+                            <td>{{ data.contact_number|default_if_none:"N/A" }}</td>
+                            <td>{{ data.gender|default_if_none:"N/A" }}</td>
+                            <td>{{ data.bank_name|default_if_none:"N/A" }}</td>
+                            <td>{{ data.state|default_if_none:"N/A" }}</td>
+                            <td>{{ data.district|default_if_none:"N/A" }}</td>
+                            <td>{{ data.office_name|default_if_none:"N/A" }}</td>
+                            <td>{{ data.pincode|default_if_none:"N/A" }}</td>
+                            <td>{{ data.corporate_bc_name|default_if_none:"N/A" }}</td>
+                            <td>{{ data.odop_product|default_if_none:"N/A" }}</td>
+                            <td>{{ data.code_word_of_product_list|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop1_name|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop1_season|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop1_area|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop1_production|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop1_pincode|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop_name|default_if_none:"N/A" }}</td>
+                            <td>{{ data.season|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop_area|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop_production|default_if_none:"N/A" }}</td>
+                            <td>{{ data.crop_name_1|default_if_none:"N/A" }}</td>
+                            <td>N/A</td>
+                            <td>{{ data.crop_area_1|default_if_none:"N/A" }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
             {% if page_obj.has_previous or page_obj.has_next %}
 
             <div class="pagination justify-content-center my-2">
@@ -98,8 +102,8 @@
                     {{ map_html | safe }}
                 </div>
             </div>
-            <div class="mapDetails" style="width: 400px;margin-left: 0px;height: 137px;overflow:scroll;scrollbar-width: none;-ms-overflow-style: none;background:#0a2bdb4a;">
-                
+            <div class="mapDetails" style="width: 400px;height: 137px;overflow:scroll;scrollbar-width: none;-ms-overflow-style: none;background:#0a2bdb4a;">
+                <p>Click and hover over the map locator to view detailed information.</p>
             </div>
         </div>
 
