--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="background:#f0f0f05e">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">GeoPointer</a>
