--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -5,19 +5,24 @@ body {
     overflow-x: hidden;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    background-color: #f0f0f0; /* Background color behind the glass effect */
+    background-color: #f0f0f0;
+    /* Background color behind the glass effect */
 }
+
 h1 {
     font-family: Arial, sans-serif;
     font-size: 24px;
     font-weight: bold;
     color: #333;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.5); /* Glass-like background color */
+    background-color: rgba(255, 255, 255, 0.5);
+    /* Glass-like background color */
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Glass-like shadow effect */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Glass-like shadow effect */
 }
+
 @media only screen and (max-width: 767px) {
     .data_view {
         display: flex;
@@ -515,4 +520,9 @@ h6 {
 .current-page-real {
     background-color: whitesmoke;
     color: black;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: #333;
 }
