--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -94,7 +94,7 @@ h2 {
 
 .Fullmap {
     box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
-    margin: 13px;
+    margin: 2px;
 }
 
 span[style="color:#565656"] {
@@ -274,7 +274,7 @@ iframe {
     overflow: hidden;
     width: 400px;
     height: 250px;
-    border: 1px solid #ccc;
+    border: 1px solid #020202;
     max-width: 900px;
     max-height: 900px;
     margin: 10px;
@@ -522,7 +522,3 @@ h6 {
     color: black;
 }
 
-.navbar a:hover {
-    background-color: #ddd;
-    color: #333;
-}
