--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -522,3 +522,26 @@ h6 {
     color: black;
 }
 
+.heatmapbtn {
+    margin-top: 20px; /* Adjust as needed */
+    text-align: end;
+}
+
+.heatmapbtn button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+}
+
+.heatmapbtn button:hover {
+    background-color: #45a049; /* Darker Green */
+}
